--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -53,6 +53,69 @@ a:hover {
     outline: 0;
 }
 
+a.emailLink {
+    display: inline-block;
+    height: 38px;
+    padding: 0 30px;
+    color: blue;
+    text-align: center;
+    font-size: 11px;
+    font-weight: 600;
+    line-height: 38px;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid white;
+    cursor: pointer;
+    box-sizing: border-box;
+
+}
+
+a.githubLink {
+
+    display: inline-block;
+    height: 38px;
+    padding: 0 37px;
+    color: blue;
+    text-align: center;
+    font-size: 11px;
+    font-weight: 600;
+    line-height: 38px;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid white;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+a.linkedinLink {
+
+    display: inline-block;
+    height: 38px;
+    padding: 0 31px;
+    color: blue;
+    text-align: center;
+    font-size: 11px;
+    font-weight: 600;
+    line-height: 38px;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid white;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
 abbr[title] {
     border-bottom: 1px dotted;
 }
@@ -217,15 +280,6 @@ th {
     padding: 0;
 }
 
-/*
-* Skeleton V2.0.4
-* Copyright 2014, Dave Gamache
-* www.getskeleton.com
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-* 12/9/2014
-* Sass Version by Seth Coelen https://github.com/whatsnewsaes
-*/
 html {
     font-size: 62.5%;
 }
