--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -140,7 +140,17 @@ h1#userName.example {
     animation-iteration-count: infinite;
 }
 
-h2#company1,h2#company2,h2#company3,h2#company4,h2#school1,img.jobLogos {
+h2#company1,
+h2#company2,
+h2#company3,
+h2#company4,
+h2#company5,
+h2#company6,
+h2#company7,
+h2#company8,
+h2#company9,
+h2#company10,
+h2#school1,img.jobLogos {
 
     width: 10%;
     height: 30px;
